Implement local storage module

--- a/src/isar/config/default.ini
+++ b/src/isar/config/default.ini
@@ -68,3 +68,6 @@ eqrobot_maps_folder = src/isar/config/maps/
 [modules]
 mission_planner = local
 storage = local
+
+[storage]
+local_storage_path = ./results
